ag-grid table and prime-ng table

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/ag-grid-community/dist/styles/ag-grid.css";
+@import "../node_modules/ag-grid-community/dist/styles/ag-theme-alpine.css";
+
+.drop-down-wrapper {
+    position: relative;
+
+    .fa-caret-down {
+        position: absolute;
+        right: 5px;
+        top: 16px;
+    }
+}
